--- a/frontPage.html
+++ b/frontPage.html
@@ -43,7 +43,7 @@
                 font-family:'Trebuchet MS';
                 color: black;
             }
-            .projects, .aboutMe, .art, .contact
+            .projects, .aboutMe, .art
             {
                 color: black;
                 font-weight: bold;
@@ -98,18 +98,17 @@
                     <button class="projects">Projects</button>
                     <button class="aboutMe">About Me</button>
                     <button class="art">Art</button>
-                    <button class="contact">Contact</button>
                 </div>
                 <div class="endTB">
                     <a class="ghLink"href="https://github.com/biseshRana" target="blank">
                         <button class="ghImageButton">
-                            <img class="ghImage"src="Github-Logo-Transparent-Background-PNG.png">
+                            <img class="ghImage"src="images/Github-Logo-Transparent-Background-PNG.png">
                         </button>
                     </a>
-                    <a class="liLink"href="https://www.linkedin.com/feed/" target="_blank">
+                    <a class="liLink"href="https://www.linkedin.com/in/bisesh-rana-3aa508252/" target="_blank">
                         <button class="liImageButton">
                             <img class="liImage"
-                            src="linkedin-png-linkedin-icon-1600.webp">
+                            src="images/linkedin-png-linkedin-icon-1600.webp">
                         </button>
                     </a>
                 </div>
