--- a/practice.html
+++ b/practice.html
@@ -1,35 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .container {
-            position: relative; /* This establishes a positioning context for absolutely positioned children */
-            width: 400px;
-            padding: 20px;
-            border: 1px solid #ccc;
-            margin: 50px auto;
-            text-align: center;
-        }
-
-        .overlay-button {
-            position: absolute; /* Absolutely position the button within the .container */
-            top: 10px; /* Position the button 10px from the top */
-            right: 10px; /* Position the button 10px from the right */
-            z-index: 10; /* Ensure the button is on top if there are other overlapping elements */
-        }
-
-        .paragraph {
-            margin: 0;
-        }
-    </style>
-    <title>Overlay Example</title>
+    <title>My Website</title>
+    <link rel="stylesheet" href="topBar.css">
 </head>
 <body>
-    <div class="container">
-        <p class="paragraph">This is a paragraph over which a button will be overlayed.</p>
-        <button class="overlay-button">Overlay Button</button>
-    </div>
+    <div id="topBarContainer"></div>
+
+    <script>
+        // JavaScript to load the topBar HTML content
+        fetch('topBar.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('topBarContainer').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading topBar:', error));
+    </script>
+
 </body>
 </html>
