--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
             }
             .all
             {
-                background-color: rgba(0, 0, 0, 0.596);
+                background-color: rgba(0, 0, 0, 0.71);
                 display: grid;
                 grid-template-columns: 500px 1fr;
                 overflow: scroll;
@@ -103,12 +103,22 @@
                 height: 30px;
                 width: 30px;
                 border-radius: 15px;
+                font-size: 10px;
+                align-content: center;
+                text-align: center;
+                background-color: blanchedalmond;
             }
             .video
             {
                 height: 100%;
                 width: 100%;
                 object-fit: contain;
+            }
+            .playButton
+            {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
             }
         </style>
     </head>
