--- a/topBar.html
+++ b/topBar.html
@@ -6,11 +6,17 @@
     <body>
         <div class="topBar">
             <div class="startTB">
-                <button class="biseshRana"> Bisesh Rana </button>
+                <a style="text-decoration: none;" href="frontPage.html">
+                    <button class="biseshRana"> Bisesh Rana </button>
+                </a>
             </div>
             <div class="middleTB">
-                <button class="projectz">Projects</button>
-                <button class="aboutMe">About Me</button>
+                <a style="text-decoration: none;" href="projects.html">
+                    <button class="projectz">Projects</button>
+                </a>
+                <a style="text-decoration: none;" href="aboutMe.html">
+                    <button class="aboutMe">About Me</button>
+                </a>
                 <button class="art">Art</button>
             </div>
             <div class="endTB">
